# simple_chatbot

./: README.md  pyproject.toml
simple_chatbot/: main.py
src/simple_chatbot/: main.py
