[project]
name = "simple_chatbot"
version = "0.0.1"
description = ""
authors = [
    {name = "Dominic Kramer", email = "DominicKramer@gmail.com"},
]
dependencies = [
    "openai>=0.28.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "Apache 2.0"}

[tool.pdm.scripts]
start = "src/simple_chatbot/main.py"
test = "python -m unittest discover -v -s tests -p '*_test.py'"
